home page graph company name not showing fixed it

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -797,7 +797,7 @@ input[type=number]::-webkit-outer-spin-button {
 /* chart library */
 .floating-tooltip-2 {
 	width: 96px;
-	height: 120px;
+	height: 124px;
 	position: absolute;
 	display: none;
 	padding: 8px !important;
